--- a/participacao-ebd/pom.xml
+++ b/participacao-ebd/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>aws-lambda-java-core</artifactId>
             <version>1.1.0</version>
         </dependency>
+        
+        <dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.7</version>
+</dependency>
     </dependencies>
 
     <build>
